<resources>
    <string name="app_name">Curight</string>
    <string name="action_settings">Settings</string>
    <string name="bmi">BMI</string>
    <string name="fasting">Fasting</string>
    <string name="systolicdia">Systolic/Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="nonfasting">Non Fasting</string>
    <string name="btnBMI">OBSE-HIGH RISK</string>
    <string name="lowrisk">Low RISK</string>
    <string name="normal">Normal</string>
    <string name="medium">Medium</string>
    <string name="summarydetails">Summary/Details</string>
    <string name="total">TOTAL</string>
    <string name="homevisit">Home Visit - Date &amp; Time</string>
    <string name="labvisit">Lab Visit - Date &amp; Time</string>
    <string name="rupee">\u20B9</string>
    <string name="parentname">Parent Name:</string>
    <string name="registerno">Registration No</string>
    <string name="phoneno">Phone No: </string>
    <string name="referaldoctors">Referal Doctor:</string>
    <string name="doctorcontactno">Doctor Contact No:</string>
    <string name="address">Address:</string>
    <string name="pincd">Enter Pin code:</string>
    <string name="addtext">Add</string>
    <string name="add">Add</string>
    <string name="or">OR</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="emailid">Email ID:</string>
    <string name="testname">Test Name</string>
    <string name="amount">Amount</string>
    <string name="proccedtopay">Proceed to Pay</string>
    <string name="reg_text"><u>Register</u></string>
    <string name="paynow">Pay Now</string>
    <string name="totalpaymentrequired">Total Payment Required</string>
    <string name="paymentndone">Payment Done</string>
    <string name="balance">Balance</string>
    <string name="report">Reports:</string>
    <string name="remark">Remarks:</string>
    <string name="paymentamount">Payment Amount</string>
    <string name="amoundpaidsuccess">Amount Paid Successfully</string>
    <string name="transactionid">"Transcation ID :</string>
    <string name="burned">Burned</string>
    <string name="workout">Workout</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="bicycle">Bicyling</string>
    <string name="swimming">Swimming</string>
    <string name="connectdevice">Connect To Device</string>
    <string name="fitbitintegration">Fitbit Integration</string>
    <string name="consume">Consumed</string>
    <string name="net">Net</string>
    <string name="totalnet">NET</string>
    <string name="Rs">\u20B9</string>
    <string name="item">Item</string>
    <string name="allTest">
        <u>AllTest</u>.
    </string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="cal">Cal/Unit</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="custom">Custom</string>
    <string name="medium1">Medium</string>
    <string name="discount">Discount</string>
    <string name="search">Search</string>
    <string name="searchtest">Search your test</string>
    <string name="save">Save</string>
    <string name="parent">Parent Name:</string>
    <string name="entermedicince">Enter Medicine</string>
    <string name="medicinereminder">Medicine Reminder</string>
    <string name="enterdiscount"> Enter Code</string>
    <string name="mygoal">My Goal is</string>
    <string name="calconsumed">Calories Consumed</string>
    <string name="submit">Submit</string>
    <string name="calburned">Calories Burned</string>
    <string name="firstname">First Name</string>
    <string name="fullname">Full Name</string>
    <string name="lastname">Last Name</string>
    <string name="medicinereminder1">Medicine Reminder</string>
    <string name="search_hint">Select City</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="vaccine">Vaccine</string>
    <string name="date">Date</string>
    <string name="taken">Taken</string>
    <string name="sixmonth">6 month</string>
    <string name="twoyear">2 year</string>
    <string name="fouryear">4 year</string>
    <string-array name="nav_toolbar_titles">
        <item>Home</item>
        <item>About Us</item>
        <item>Contact Us</item>
        <item>Feedback</item>
        <item>Rate App</item>
        <item>Refer A Earn</item>
        <item>Sign out</item>


    </string-array>
    <string name="dueon"><b>Due On</b></string>
    <string name="takeon"><b>Taken On</b></string>
    <string name="givenby"><b>Given By</b></string>
    <string name="details"><b>Details :</b></string>
    <string name="details1"><b>Details</b></string>
    <string name="reminder">Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="modify">Modify</string>
    <string name="disoucntcode">Discount Code</string>
    <string name="addreminder">Add Reminder</string>
    <string name="healthtoday">Health Today</string>
    <string name="myth">Myth Breaker</string>
    <string name="patient">Patient Awareness</string>
    <string name="protocol">Protocol for Emergencies</string>
    <string name="story">Story by PharmEasy</string>
    <string name="serious">Why so Serious?</string>
    <string name="woman">Women Health</string>
    <string name="healthnetwork">Health Network</string>
    <string name="track">TRACK</string>
    <string name="email">Email</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirmpassword"> Confirm Password</string>
    <string name="regitstraion">Registraion</string>
    <string name="close">Close</string>
    <string name="skip">Skip</string>
    <string name="take"><b>Taken</b></string>
    <string name="medication">Medication</string>
    <string name="selectmedicine">Select Medicine</string>
    <string name="startdate">Start Date:</string>
    <string name="duration">Duration</string>
    <string name="lifetime">Lifetime</string>
    <string name="notes">Notes</string>
    <string name="strength">Strength</string>
    <string name="dos">Dose</string>
    <string name="morningreminder">8:30AM</string>
    <string name="noonremingder">12:30PM</string>
    <string name="eveningrminder">4:30AM</string>
    <string name="nightreminder">8:30PM</string>
    <string name="trends">TRENDS</string>
    <string name="list">LIST</string>
    <string name="medicineremindertitle">Medicine Reminder</string>
    <string name="home">HOME</string>
    <string name="article">ARTICLE</string>
    <string name="profile">PROFILE</string>
    <string name="reminder1">REMINDER</string>
    <string name="track1">TRACK</string>
    <string name="patientname">Patient Name</string>
    <string name="mobileno">Mobile No:</string>
    <string name="paidamount">Paid Amount</string>
    <string name="diastolic">Diastolic</string>
    <string name="mmgg">(mmHg)</string>
    <string name="bpm">bmp</string>
    <string name="pulse1">Pulse</string>
    <string name="BCid">BCID</string>
    <string name="AntiCPP">AntiCPP(U/mL)</string>
    <string name="CRP">CRP(mg/L)</string>
    <string name="ESR">ESR(mm/hr)</string>
    <string name="Haemoglobin">Haemoglobin(g/dL)</string>
    <string name="HbA1c">HbA1c(%)</string>
    <string name="Prolactin">Prolactin(ng/mL)</string>
    <string name="INR">INR</string>
    <string name="RBC">RBC(x10^12/L)</string>
    <string name="RF">RF(U/mL)</string>
    <string name="WBC">WBC(x10^9/L)</string>
    <string name="Platelet">Platelet(x10^9/L)</string>
    <string name="cholestrol">Cholestrol</string>
    <string name="whr">WHR</string>
    <string name="waistcircumference">Waist Circumference\n(inches)</string>
    <string name="hipcircumference_whr">Hip Circumference\n(inches)</string>
    <string name="googlefitbit">GoogleFitbit</string>
    <string name="chooseoption">Choose an Option!</string>
    <string name="medicineremind">Medicine Reminder</string>
    <string name="vaccineremind">Vaccine Reminder</string>
    <string name="mode">Mode</string>
    <string name="cash">Cash</string>
    <string name="online">Online</string>
    <string name="paymenta">Payment Amount</string>
    <string name="selectdate">Select Date</string>
    <string name="alltest">ALL TEST</string>
    <string name="diagnosticenter">Select Diagnostic Centre</string>
    <string name="totalpaybleamount">Total Payable Amount</string>
    <string name="discountcode">Select Discount Code</string>
    <string name="enterdiscountcode">Enter Dicount Code :</string>
    <string name="mygoal1">My Goal</string>
    <string name="bfast">Breakfast</string>
    <string name="height">Height</string>
    <string name="name">Name</string>
    <string name="befpremeal">Before Meal</string>
    <string name="aftermeal">After Meal</string>
    <string name="addtest">Add Another Test</string>
    <string name="ldl">LDL</string>
    <string name="hdl">HDL</string>
    <string name="booktest">Book Tests</string>
    <string name="healthpackage">Health Package</string>
    <string name="doctorappointment">Doctor Appointment</string>
    <string name="yourreports">Your Reports</string>
    <string name="fitness">Food / Fitness</string>
    <string name="medicinediease">Medicine and Disease Guide</string>
    <string name="name2">Name</string>
    <string name="contact">ContactNo.</string>
    <string name="entercal">Enter cal burned</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="interest">Select Interest :</string>
    <string name="martial">MartialStatus</string>
    <string name="relation">Relationship</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin">Pin</string>
    <string name="interest1">Interest</string>
    <string name="bloodsugar">BloodSugar</string>
    <string name="normalduration">Normal Duration</string>
    <string name="currentperiod">Current Period</string>
    <string name="gap">gap</string>
    <string name="notes2">Notes</string>
    <string name="misssed">Did I missed ?</string>
    <string name="dmisssed">I did\'nt missed</string>
    <string name="setreminder">Set Reminder</string>
    <string name="normalperiodduration">Normal Period Duration</string>
    <string name="firstperiod">Gap</string>
    <string name="secondperiod">2nd Period</string>
    <string name="missperiod">Did you miss?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="setgoal">SET GOAL</string>
    <string name="medicineanddisease">Medicine And Disease Guide</string>
    <string name="loc">Choose Location</string>
    <string name="systolic_diastolic_formatted">%1$d/%2$d</string>
    <string name="date_formatted">%1$d-%2$d-%3$d</string>
    <string name="time_formatted">%1$d:%2$d</string>
    <string name="triglycerides_mg_dl">Triglycerides\n(mg/dL)</string>
    <string name="hdl_mg_dl">HDL\n(mg/dL)</string>
    <string name="ldl_mg_dl">LDL\n(mg/dL)</string>
    <string name="weight_kg">Weight\n(kg)</string>
    <string name="height_inches">Height\n(inches)</string>
    <string name="my_goal_formatted">My Goal is: %1$d cal</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="km_h_formatted">%1$d km/h</string>
    <string-array name="array_gender">
        <item> </item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>