<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/llName"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:hint="@string/name"
            android:textSize="12sp"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/gray" />

        <EditText
            android:id="@+id/etContactNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:maxLines="1"
            android:layout_weight="50"
            android:backgroundTint="@color/gray"
            android:hint="@string/contact"
            android:textSize="12sp" />

    </LinearLayout>
    <Button
        android:text="@string/add"
        android:id="@+id/btnAdd"
        android:layout_below="@+id/llName"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_below="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>



</RelativeLayout>