<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/lightgray"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="5dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:theme="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title"
                 android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicinereminder"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:layout_below="@id/toolbar"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/etEnterMedicine"
        android:hint="@string/entermedicince"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:text="OR"
        android:textColor="@color/darkgray"
        android:id="@+id/tvOR"
        android:layout_below="@+id/etEnterMedicine"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content" />
<EditText
    android:id="@+id/etSearch"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    android:hint="@string/search"
    android:layout_below="@+id/tvOR"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/border"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSearch"
        android:layout_centerHorizontal="true" />

</RelativeLayout>