<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="55dp"
    android:paddingBottom="20dp"
    android:background="@android:color/white"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:id="@+id/card_header"
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/chooseoption"
            android:textAllCaps="false"
            android:textColor="@color/darkgray" />


    </LinearLayout>
    <TextView
        android:layout_below="@+id/card_header"
       android:background="@color/darkgray"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:textColor="@color/darkgray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_header">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvMedicine"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:text="@string/medicineremind"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:id="@+id/tvVaccine"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:text="@string/vaccineremind"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>



</RelativeLayout>